# cerely_background_tasks

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: main.py
background/: task.py
