[tool.poetry]
name = "celery-background-tasks"
version = "0.1.0"
description = ""
authors = ["ToshinoriTakahashi <dr.t.takahashi.0917@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.3.6"
flower = "^2.0.1"
redis = "^5.0.1"
hiredis = "^2.3.2"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
